--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
@@ -872,13 +872,11 @@
 		overflow: visible;
 	}
 	.section-ucp-edit-memberships .cp-main fieldset {
-		.left-box, .right-box {
-			float: none;
-			width: auto;
+		.left-box {
+			width: 40%;
 		}
 		.right-box {
-			margin-top: 10px;
-			text-align: left;
+			width: 60%;
 		}
 	}
 	.mcp-main #mcp_queue {
@@ -1268,6 +1266,15 @@
 		text-overflow: ellipsis;
 		overflow: hidden;
 	}
+	.section-ucp-edit-memberships .cp-main fieldset {
+		.left-box, .right-box {
+			float: none;
+			width: auto;
+		}
+		.right-box {
+			margin-top: 10px;
+		}
+	}
 	.section-mcp-view-topic .cp-main #display-panel dl dd.has-multiple-fields.has-space select#st + label {
 		@include flex(full);
 		select {
@@ -1484,22 +1491,6 @@
 		.panel, .post.pm, .topicreview {
 			padding: 20px 10px 0 10px;
 		}
-		fieldset dl dd {
-			label[for*='_width'], label[for*='_height'] {
-				margin-right: 0;
-				display: block;
-			}
-			label[for*='_width']:after {
-				content: ' in width';
-			}
-			label[for*='_height'] {
-				border-top: $ffs solid $color-05;
-				margin-top: -21px;
-				&:after {
-					content: ' in height';
-				}
-			}
-		}
 		#avatar_option_avatar_driver_local fieldset {
 			label[for='category'] {
 				margin-right: 0;
@@ -1535,6 +1526,10 @@
 			margin-left: 0;
 		}
 	}
+	.section-ucp-manage-groups .cp-main fieldset dd span[style*='background-color'] {
+		width: calc(100% - 5px);
+		top: 0;
+	}
 	.section-ucp-compose-message .cp-main #pmheader-postingbox .recipients ul li .button2 {
 		display: inline-block;
 	}
@@ -1564,24 +1559,17 @@
 		}
 	}
 	.section-ucp-edit-memberships .cp-main fieldset .right-box {
-		@include reset-font-size('> *');
-		label, select {
-			width: 100%;
-		}
-		.button2 {
-			margin-top: $ffs;
+		display: block;		
+		select {
+			margin: $ffs 0;
 		}
 	}
-	.mcp-main {
-		.forum-selection {
-			label {
-				display: block;
-				select {
-					width: 100%;
-					max-width: none;
-					margin: $ffs 0;
-				}
-			}
+	.mcp-main .forum-selection label {
+		display: block;
+		select {
+			width: 100%;
+			max-width: none;
+			margin: $ffs 0;
 		}
 	}
 	.section-mcp-moderation-queue .cp-main .postbody .post-notice {
